[package]
name = "apexcharts"
version = "0.1.2"
edition = "2021"
description = "ApexCharts bindings for Rust"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = "0.4.50"
axum = { version = "0.7.9", optional = true }
serde_json = "1.0.139"
serde-wasm-bindgen = "0.6.0"
indexmap = { version = "2.7.1", features = ["serde"] }
web-sys = { version = "0.3.77", features = ["Document", "Element", "Window"] }

[features]
ssr = []
